--- a/index.html
+++ b/index.html
@@ -5,60 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXA DIGITAL STORE</title>
     <style>
-        /* --- STYLE PS5 ORIGINAL --- */
+        /* --- STYLE PS5 ORIGINAL RÉTABLI --- */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --ps5-blue: #0070cc;
-            --ps5-white: #ffffff;
-            --ps5-black: #000000;
-            --ps5-gray: #1a1a1a;
-            --ps5-light-gray: #2d2d2d;
-            --accent: #00d4ff;
+            --ps5-blue: #0070cc; --ps5-white: #ffffff; --ps5-black: #000000;
+            --ps5-gray: #1a1a1a; --ps5-light-gray: #2d2d2d; --accent: #00d4ff;
         }
         body {
             background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
-            color: var(--ps5-white);
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            color: var(--ps5-white); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             overflow-x: hidden;
         }
         header {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(20px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            padding: 20px 40px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            position: sticky;
-            top: 0;
-            z-index: 100;
+            background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(20px);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding: 20px 40px;
+            display: flex; align-items: center; justify-content: space-between;
+            position: sticky; top: 0; z-index: 100;
         }
-        .logo {
-            font-size: 28px; font-weight: 900;
-            background: linear-gradient(135deg, #0070cc, #00d4ff);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            letter-spacing: 2px;
-        }
+        .logo { font-size: 28px; font-weight: 900; background: linear-gradient(135deg, #0070cc, #00d4ff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; letter-spacing: 2px; }
         .search-box { flex: 1; max-width: 500px; margin: 0 40px; }
-        .search-box input {
-            width: 100%; padding: 14px 24px;
-            background: rgba(255, 255, 255, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            border-radius: 30px; color: white;
-        }
-        .version { background: rgba(0, 112, 204, 0.2); padding: 8px 20px; border-radius: 20px; font-size: 13px; color: var(--accent); }
-        nav { background: rgba(0, 0, 0, 0.5); padding: 0 40px; display: flex; gap: 10px; overflow-x: auto; }
-        .nav-item { padding: 20px 32px; cursor: pointer; color: rgba(255, 255, 255, 0.6); white-space: nowrap; font-weight: 600; }
-        .nav-item.active { color: var(--ps5-white); border-bottom: 3px solid var(--ps5-blue); }
+        .search-box input { width: 100%; padding: 14px 24px; background: rgba(255, 255, 255, 0.08); border: 1px solid rgba(255, 255, 255, 0.15); border-radius: 30px; color: white; }
+        
+        nav { background: rgba(0, 0, 0, 0.5); padding: 0 40px; display: flex; gap: 10px; overflow-x: auto; border-bottom: 1px solid rgba(255, 255, 255, 0.05); }
+        .nav-item { padding: 20px 32px; cursor: pointer; border-bottom: 3px solid transparent; transition: all 0.3s; font-weight: 600; color: rgba(255, 255, 255, 0.6); white-space: nowrap; }
+        .nav-item.active { color: var(--ps5-white); border-bottom-color: var(--ps5-blue); }
+
         .container { padding: 40px; max-width: 1800px; margin: 0 auto; }
-        .section { display: none; }
-        .section.active { display: block; animation: fadeIn 0.4s ease; }
+        .section { display: none; animation: fadeIn 0.4s ease; }
+        .section.active { display: block; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 30px; }
-        .card {
-            background: rgba(255, 255, 255, 0.03); border-radius: 20px; overflow: hidden;
-            cursor: pointer; transition: all 0.4s; border: 1px solid rgba(255, 255, 255, 0.08);
-        }
+        .card { background: rgba(255, 255, 255, 0.03); border-radius: 20px; overflow: hidden; cursor: pointer; transition: all 0.4s; border: 1px solid rgba(255, 255, 255, 0.08); }
         .card:hover { transform: translateY(-10px); border-color: var(--accent); box-shadow: 0 10px 30px rgba(0, 212, 255, 0.3); }
         .card-cover { width: 100%; aspect-ratio: 3/4; background-size: cover; background-position: center; position: relative; background-color: #222; }
         .card-badge { position: absolute; top: 10px; right: 10px; background: var(--ps5-blue); color: white; padding: 4px 10px; border-radius: 10px; font-size: 10px; font-weight: bold; }
@@ -66,20 +44,14 @@
         .card-title { font-size: 14px; font-weight: bold; margin-bottom: 5px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         .card-meta { display: flex; justify-content: space-between; font-size: 11px; color: rgba(255,255,255,0.5); }
 
-        /* MODAL */
-        .modal-overlay {
-            display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9); z-index: 1000; align-items: center; justify-content: center;
-        }
+        /* MODAL STYLE */
+        .modal-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.92); z-index: 1000; align-items: center; justify-content: center; backdrop-filter: blur(10px); }
         .modal-overlay.active { display: flex; }
-        .modal { background: #1a1a1a; width: 90%; max-width: 900px; border-radius: 20px; display: flex; overflow: hidden; position: relative; }
-        .modal-left { flex: 1; background-size: cover; background-position: center; min-height: 400px; }
+        .modal { background: #1a1a1a; width: 90%; max-width: 1000px; border-radius: 24px; display: flex; overflow: hidden; border: 1px solid rgba(255,255,255,0.1); }
+        .modal-left { flex: 1.2; background-size: cover; background-position: center; min-height: 500px; }
         .modal-right { flex: 1; padding: 40px; display: flex; flex-direction: column; }
-        .btn-download {
-            background: linear-gradient(135deg, #0070cc, #00d4ff); color: white; border: none;
-            padding: 15px; border-radius: 10px; font-weight: bold; cursor: pointer; margin-top: auto;
-        }
-        .modal-close { position: absolute; top: 20px; right: 20px; font-size: 30px; cursor: pointer; color: white; z-index: 10; }
+        .btn-download { background: linear-gradient(135deg, #0070cc, #00d4ff); color: white; border: none; padding: 20px; border-radius: 16px; font-weight: 800; cursor: pointer; margin-top: auto; letter-spacing: 1px; }
+        .modal-close { position: absolute; top: 20px; right: 25px; font-size: 40px; cursor: pointer; color: white; }
     </style>
 </head>
 <body>
@@ -87,20 +59,23 @@
     <header>
         <div class="logo">NEXA STORE</div>
         <div class="search-box">
-            <input type="text" placeholder="Rechercher dans la base FPKGi..." id="searchInput">
+            <input type="text" placeholder="Rechercher un PKG..." id="searchInput">
         </div>
-        <div class="version">LIVE DB</div>
+        <div class="version">V1.0 DB</div>
     </header>
 
-    <nav>
-        <div class="nav-item active" data-section="games">JEUX FPKGI</div>
+    <nav id="mainNav">
+        <div class="nav-item active" data-section="games">JEUX</div>
+        <div class="nav-item" data-section="apps">APPLICATIONS</div>
+        <div class="nav-item" data-section="themes">THÈMES</div>
+        <div class="nav-item" data-section="dlc">DLC & UPDATES</div>
     </nav>
 
     <div class="container">
-        <section id="games" class="section active">
-            <div class="grid" id="gamesGrid">
-                </div>
-        </section>
+        <section id="games" class="section active"><div class="grid" id="gamesGrid"></div></section>
+        <section id="apps" class="section"><div class="grid" id="appsGrid"></div></section>
+        <section id="themes" class="section"><div class="grid" id="themesGrid"></div></section>
+        <section id="dlc" class="section"><div class="grid" id="dlcGrid"></div></section>
     </div>
 
     <div class="modal-overlay" id="modalOverlay">
@@ -108,12 +83,12 @@
             <div class="modal-close" onclick="closeModal()">×</div>
             <div class="modal-left" id="modalImg"></div>
             <div class="modal-right">
-                <h2 id="modalTitle" style="margin-bottom:20px;"></h2>
-                <p id="modalDesc" style="color:gray; font-size: 14px; margin-bottom:20px;"></p>
-                <div style="margin-bottom:20px; font-size: 14px;">
-                    <p>Taille: <span id="modalSize" style="color:var(--accent)"></span></p>
-                    <p>ID: <span id="modalID" style="color:var(--accent)"></span></p>
+                <h2 id="modalTitle" style="font-size: 28px; margin-bottom:15px;"></h2>
+                <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 12px; margin-bottom: 20px;">
+                    <p style="font-size: 13px; color: #aaa;">TAILLE: <span id="modalSize" style="color:var(--accent); font-weight: bold;"></span></p>
+                    <p style="font-size: 13px; color: #aaa;">ID: <span id="modalID" style="color:var(--accent); font-weight: bold;"></span></p>
                 </div>
+                <p id="modalDesc" style="color:rgba(255,255,255,0.7); line-height: 1.6; margin-bottom: 30px;"></p>
                 <button class="btn-download" onclick="downloadPkg()">⬇️ TÉLÉCHARGER PKG</button>
             </div>
         </div>
@@ -121,10 +96,9 @@
 
     <script>
         const FPKGI_URL = "https://raw.githubusercontent.com/r00t-3xp1o1t/fP_PKG_installer/master/db.txt";
-        let allGames = [];
+        let db = { games: [], apps: [], themes: [], dlc: [] };
         let currentItem = null;
 
-        // --- CHARGEMENT DE LA BASE DE DONNÉES ---
         async function initStore() {
             try {
                 const response = await fetch(FPKGI_URL);
@@ -134,68 +108,69 @@
                 lines.forEach(line => {
                     const parts = line.split(';');
                     if (parts.length >= 4) {
-                        const contentID = parts[1].trim();
-                        allGames.push({
-                            name: parts[0].trim(),
-                            id: contentID,
-                            url: parts[2].trim(),
-                            size: parts[3].trim(),
-                            // Utilisation de l'icône officielle PSN via Content ID
-                            cover: `https://store.playstation.com/store/api/chihiro/00_09_000/container/FR/fr/99/9/${contentID}/image?w=480&h=480`
-                        });
+                        const name = parts[0].trim();
+                        const id = parts[1].trim();
+                        const item = {
+                            name: name, id: id, url: parts[2].trim(), size: parts[3].trim(),
+                            cover: `https://store.playstation.com/store/api/chihiro/00_09_000/container/FR/fr/99/9/${id}/image?w=480&h=480`
+                        };
+
+                        // Algorithme de tri automatique par catégorie
+                        if (name.toLowerCase().includes('theme')) db.themes.push(item);
+                        else if (name.toLowerCase().includes('update') || name.toLowerCase().includes('dlc')) db.dlc.push(item);
+                        else if (parseFloat(item.size) < 0.2 && !name.toLowerCase().includes('demo')) db.apps.push(item); // Moins de 200mo = souvent une app
+                        else db.games.push(item);
                     }
                 });
-                render(allGames);
-            } catch (e) {
-                console.error("Erreur DB:", e);
-                document.getElementById('gamesGrid').innerHTML = "<p>Erreur de connexion à FPKGi</p>";
-            }
+
+                renderAll();
+            } catch (e) { console.error(e); }
         }
 
-        // --- AFFICHAGE DES CARTES ---
-        function render(data) {
-            const grid = document.getElementById('gamesGrid');
+        function renderAll() {
+            renderGrid(db.games, 'gamesGrid', 'JEU');
+            renderGrid(db.apps, 'appsGrid', 'APP');
+            renderGrid(db.themes, 'themesGrid', 'THÈME');
+            renderGrid(db.dlc, 'dlcGrid', 'UPDATE');
+        }
+
+        function renderGrid(data, gridId, badge) {
+            const grid = document.getElementById(gridId);
             grid.innerHTML = data.map(item => `
                 <div class="card" onclick="openModal('${item.id}')">
                     <div class="card-cover" style="background-image: url('${item.cover}'), url('https://via.placeholder.com/300x400?text=PS4+PKG')">
-                        <div class="card-badge">FPKGI</div>
+                        <div class="card-badge">${badge}</div>
                     </div>
                     <div class="card-info">
                         <div class="card-title">${item.name}</div>
-                        <div class="card-meta">
-                            <span>${item.id.substring(0,4)}</span>
-                            <span style="color:var(--accent)">${item.size}</span>
-                        </div>
+                        <div class="card-meta"><span>${item.id.substring(0,4)}</span><span style="color:var(--accent)">${item.size}</span></div>
                     </div>
                 </div>
             `).join('');
         }
 
-        // --- RECHERCHE ---
-        document.getElementById('searchInput').addEventListener('input', (e) => {
-            const term = e.target.value.toLowerCase();
-            const filtered = allGames.filter(g => g.name.toLowerCase().includes(term) || g.id.toLowerCase().includes(term));
-            render(filtered);
+        // Navigation
+        document.querySelectorAll('.nav-item').forEach(btn => {
+            btn.onclick = () => {
+                document.querySelectorAll('.nav-item, .section').forEach(el => el.classList.remove('active'));
+                btn.classList.add('active');
+                document.getElementById(btn.dataset.section).classList.add('active');
+            };
         });
 
-        // --- MODALE ---
         function openModal(id) {
-            currentItem = allGames.find(g => g.id === id);
+            // Cherche l'item dans toutes les catégories
+            currentItem = [...db.games, ...db.apps, ...db.themes, ...db.dlc].find(g => g.id === id);
             document.getElementById('modalTitle').textContent = currentItem.name;
             document.getElementById('modalSize').textContent = currentItem.size;
             document.getElementById('modalID').textContent = currentItem.id;
-            document.getElementById('modalDesc').textContent = "Lien direct vers le serveur PKG. Prêt pour installation via Remote PKG Installer ou copie USB.";
+            document.getElementById('modalDesc').textContent = "Contenu récupéré depuis la base FPKGi. Prêt pour une installation via Remote PKG Installer ou support USB externe.";
             document.getElementById('modalImg').style.backgroundImage = `url('${currentItem.cover}')`;
             document.getElementById('modalOverlay').classList.add('active');
         }
 
-        function closeModal() {
-            document.getElementById('modalOverlay').classList.remove('active');
-        }
-
-        function downloadPkg() {
-            if(currentItem) window.open(currentItem.url, '_blank');
-        }
+        function closeModal() { document.getElementById('modalOverlay').classList.remove('active'); }
+        function downloadPkg() { if(currentItem) window.open(currentItem.url, '_blank'); }
 
         window.onload = initStore;
     </script>
