--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
 <body>
 
 <header>
-   <div class="logo">
-    <img src="logo_nexa.png" alt="NEXA STORE" style="height: 60px; filter: drop-shadow(0 0 5px rgba(0, 112, 204, 0.5));">
-</div>
+    <div class="logo">🛠️ NEXA STORE</div>
     <div class="header-controls">
         <div class="search-box">
             <input type="text" id="searchInput" placeholder="Rechercher des apps, thèmes, outils...">
@@ -801,18 +799,7 @@
         document.getElementById('modalBody').innerHTML = bodyHTML;
         
         const downloadBtn = document.getElementById('modalDownload');
-   // Remplace la ligne 804 par ce bloc pour forcer le téléchargement direct
-const downloadBtn = document.getElementById('modalDownload');
-downloadBtn.onclick = function(e) {
-    e.preventDefault(); // Empêche la redirection 404
-    const link = document.createElement('a');
-    link.href = currentApp.download;
-    link.download = ''; // Force le téléchargement du fichier PKG
-    link.target = '_blank';
-    document.body.appendChild(link);
-    link.click();
-    document.body.removeChild(link);
-};
+        downloadBtn.href = currentApp.download;
         
         if (currentApp.category === 'themes') {
             downloadBtn.innerHTML = '📥 TÉLÉCHARGER LE THÈME (PKG)';
