--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 <body>
 
 <header>
-    <div class="logo">🛠️ NEXA STORE</div>
+    <div class="logo">
+    <img src="logo_nexa.png" alt="NEXA STORE" style="height: 60px; filter: drop-shadow(0 0 5px rgba(0, 112, 204, 0.5));">
+</div>
     <div class="header-controls">
         <div class="search-box">
             <input type="text" id="searchInput" placeholder="Rechercher des apps, thèmes, outils...">
