--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 "Mise à jour automatique : Téléchargement des derniers cheats via internet en un clic.",
                 "Installation simplifiée : Installation directe des fichiers .json et .sh au bon endroit.",
                 "Recherche par ID : Trouvez vos jeux instantanément via leur code CUSA.",
-                "Support GoldHEN : Compatibilité parfaite avec le menu "Cheat Menu" (Touche Share).",
+                "Support GoldHEN : Compatibilité parfaite avec le menu Cheat Menu.",
                 "Mode hors-ligne : Gérez vos cheats installés sans avoir besoin de connexion."
             ],
             download: "https://github.com/GoldHEN/GoldHEN_Cheat_Manager/releases/download/v1.1.4/IV0000-GOLD00777_00-GOLDCHEATS000PS4.pkg",
