--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     const apps = [
         {
             name: "GoldHEN Cheats Manager",
-            category: "apps",
+            category: "tools",
             version: "v1.1.4",
             size: "16.8 MB",
             icon: "🎮",
