--- a/index.html
+++ b/index.html
@@ -231,23 +231,23 @@
             requirements: "GoldHEN 2.0 ou supérieur"
         },
         {
-            name: "Orbis Toolbox",
-            category: "tools",
+            name: "Itemzflow Game Manager",
+            category: "apps",
             version: "v1.1.0",
-            size: "5 MB",
-            icon: "🔨",
+            size: "25,5 MB",
+            icon: "💾",
             color: "#9C27B0",
-            description: "Suite d'outils système professionnels pour PS4. Monitoring en temps réel, debugging, gestion mémoire et optimisation des performances avec interface overlay.",
+            description: "ItemzFlow est une alternative gratuite et Open Source au menu d'accueil (ShellUI) de la PS4. Bien plus qu'un simple lanceur, il repousse les limites imposées par Sony pour offrir une expérience totalement personnalisée et ultra-complète.",
             features: [
-                "Monitoring température CPU/GPU",
-                "Overlay FPS dans tous les jeux",
+                "Lanceur de jeux : Interface fluide avec jaquettes et catégories.",
+                "Store intégré : Téléchargement de thèmes et d'outils directement.",
                 "Gestion mémoire RAM",
-                "Debug tools pour développeurs",
+                "Dump de jeux : Copie de vos disques vers le disque dur en un clic.",
                 "Contrôle ventilateur manuel",
-                "Informations système détaillées"
+                "Overlay FPS : Affichage des images par seconde en plein jeu."
             ],
-            download: "https://github.com/OSM-Made/Orbis-Toolbox/releases/download/v1.1.0/Orbis-Toolbox.pkg",
-            requirements: "GoldHEN 2.4 ou supérieur"
+            download: "https://pkg-zone.com/download/ps4/ITEM00001/latest",
+            requirements: "GoldHEN 2.3 ou supérieur"
         },
         {
             name: "WebMAN MOD",
