--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
     <div class="header-info">
         <div class="count" id="count">0 APPS</div>
-        <div class="version">V1.1ALPHA</div>
+        <div class="version">V1.1.1</div>
     </div>
 </header>
 
