--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
     // COPIEZ-COLLEZ LES NOUVEAUX OBJETS GÉNÉRÉS PAR LE CMS ICI ↓
     const apps = [
         {
+    name: "Apple TV",
+    category: "apps",
+    version: "v1.11",
+    size: "126 MB",
+    icon: "🎞",
+    color: "#0000",
+    description: "Apple TV est un service de streaming proposant des centaines de séries et films exclusifs – drames captivants, sagas fantasti­ques, comédies réconfortantes et plus encore – avec des nouveautés chaque semaine.",
+    features: [
+                "Lecture de films et séries original",
+                "Catalogue complet",
+                "Interface intuitive",
+                "Synchronisation avec vos autres appareil"
+    ],
+    download: "https://pkg-zone.com/download/ps4/CUSA24386/1.11",
+    requirements: "Compatible FW 5.05 à 11.0 ( App nécessitant un abonnement Apple TV+ )"
+},
+        {
     name: "PS4 Temperature",
     category: "tools",
     version: "v1.07",
