--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
     // COPIEZ-COLLEZ LES NOUVEAUX OBJETS GÉNÉRÉS PAR LE CMS ICI ↓
     const apps = [
         {
+    name: "Uncharted & Tomb Raider",
+    category: "themes",
+    version: "v1.0",
+    size: "14,4 MB",
+    icon: "🧭",
+    color: "#d4",
+    description: "Un thème dynamique magnifique inspiré des univers d'Uncharted et Tomb Raider. Transformer votre menu PS4 avec des visuels épiques",
+    features: [
+                "Design Dual Universe",
+                "Icônes personnalisées",
+                "Fond écran HD",
+                "Ambiance sonore"
+    ],
+    download: "https://pkg-zone.com/download/ps4/CUSA16881/latest",
+    requirements: "GoldHEN v2.0 ou supérieur"
+},
+        {
     name: "Apple TV",
     category: "apps",
     version: "v1.11",
