--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <header>
     <div class="logo">
-    <img src="logo.png" alt="NEXA" style="height: 40px; width: auto; vertical-align: middle;">
+    <img src="logo.PNG" alt="NEXA" style="height: 40px; width: auto; vertical-align: middle;">
 </div>
     <div class="search-box">
         <input type="text" id="searchInput" placeholder="Rechercher des apps, thèmes, outils...">
