--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXA STORE - PS4 Homebrew</title>
     <style>
@@ -196,7 +197,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "tools",
             version: "v1.1.4",
             size: "16.8 MB",
-            icon: "🎮",
+            icon: "\uD83C\uDFAE",
             color: "#4CAF50",
             description: "Le gestionnaire de triche ultime pour GoldHEN. Cette application officielle vous permet de parcourir, télécharger et activer des codes de triche (cheats) pour des milliers de jeux PS4 directement depuis votre console.",
             features: [
