--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
     <div class="header-info">
         <div class="count" id="count">Contenu : 0 élément</div>
-        <div class="version">V1.2.1</div>
+        <div class="version">V1.2.2</div>
     </div>
 </header>
 
@@ -164,7 +164,7 @@
     <p class="legal">All product names, logos, trademarks, and registered trademarks belong to their respective owners.
 Use of these names and trademarks does not imply any affiliation with or endorsement by them.</p>
     <p class="legal">Developed with passion for the community.</p>
-    <p class="credits">Design & Engine by <strong>Enzo445</strong> • Version 1.2.1</p>
+    <p class="credits">Design & Engine by <strong>Enzo445</strong> • Version 1.2.2</p>
 </footer>
 
 <div class="modal-overlay" id="modalOverlay" onclick="if(event.target==this)closeModal()">
@@ -237,7 +237,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "apps",
             version: "v1.7",
             size: "25.5 MB",
-            icon: "\uD83C\uDF10",
+            icon: "\uD83D\uDCBE",
             color: "#9C27B0",
             description: "ItemzFlow est une alternative gratuite et Open Source au menu d'accueil (ShellUI) de la PS4. Bien plus qu'un simple lanceur, il repousse les limites imposées par Sony pour offrir une expérience totalement personnalisée et ultra-complète.",
             features: [
@@ -257,7 +257,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "tools",
             version: "v1.47.45",
             size: "2 MB",
-            icon: "🌐",
+            icon: "\uD83C\uDF10",
             color: "#673AB7",
             description: "L'outil système le plus puissant pour PS4. Montage ISO, gestion ventilateur, température, FTP, serveur web, backup. L'indispensable pour PS4 jailbreakée.",
             features: [
@@ -277,7 +277,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "apps",
             version: "v1.11",
             size: "126 MB",
-            icon: "🎞",
+            icon: "\uD83C\uDFAC",
             color: "#000000",
             description: "Apple TV est un service de streaming proposant des centaines de séries et films exclusifs – dramas captivants, sagas fantastiques, comédies réconfortantes et plus encore – avec des nouveautés chaque semaine.",
             features: [
@@ -297,7 +297,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "tools",
             version: "v1.07",
             size: "48 MB",
-            icon: "🌡",
+            icon: "\uD83C\uDF21",
             color: "#00d2ff",
             description: "Un utilitaire indispensable pour surveiller la santé de votre console en temps réel. Évitez la surchauffe et prolongez la durée de vie de votre PS4.",
             features: [
@@ -317,7 +317,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "themes",
             version: "v1.0",
             size: "14.4 MB",
-            icon: "🧭",
+            icon: "\uD83E\uDDE4",
             color: "#D4A574",
             description: "Un thème dynamique magnifique inspiré des univers d'Uncharted et Tomb Raider. Transformez votre menu PS4 avec des visuels épiques.",
             features: [
