--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
             category: "themes",
             version: "v1.0",
             size: "14.4 MB",
-            icon: "\uD83E\uDDE4",
+            icon: "\uD83E\uDDED",
             color: "#D4A574",
             description: "Un thème dynamique magnifique inspiré des univers d'Uncharted et Tomb Raider. Transformez votre menu PS4 avec des visuels épiques.",
             features: [
