--- a/index.html
+++ b/index.html
@@ -222,6 +222,26 @@ Use of these names and trademarks does not imply any affiliation with or endorse
     // ============================================
     const apps = [
         {
+    name: "Apollo Save Tool",
+    developer: "Bucanero",
+    category: "tools",
+    version: "v2.2.4",
+    size: "16,1 MB",
+    icon: "\u1F6E0",
+    color: "#0",
+    description: "Apollo Save Tool est un utilitaire complet pour gérer vos sauvegardes PS4. Il permet de télécharger des saves à 100%, d'appliquer des codes de triche et de re-signer des fichiers tiers pour les rendre compatibles avec votre compte. Un outil indispensable pour modifier vos données et débloquer vos trophées en toute simplicité.",
+    features: [
+                "Gestion des sauvegardes : Accès et gestion de toutes vos sauvegardes PS4.",
+                "Resign & Signature : Ré-attribution des sauvegardes à votre propre profil.",
+                "Gestion des trophées : Outils pour débloquer ou gérer vos trophées localement.",
+                "Base de données : Téléchargement de sauvegardes et de codes de triche en ligne.",
+                "Édition de données : Modification des fichiers système et des paramètres.",
+                "Transfert USB : Importation et exportation rapide via clé USB."
+    ],
+    download: "https://pkg-zone.com/download/ps4/APOL00004/latest",
+    requirements: "Firmware 5.05 à 12.52 / GoldHEN v2.4b18.7 ou supérieur"
+},
+        {
             name: "GoldHEN Cheats Manager",
             developer: "GoldHEN Team",
             category: "tools",
