--- a/index.html
+++ b/index.html
@@ -222,6 +222,25 @@ Use of these names and trademarks does not imply any affiliation with or endorse
     // ============================================
     const apps = [
         {
+    name: "PKGi",
+    developer: "ThoeryWrong",
+    category: "apps",
+    version: "v1.0",
+    size: "3,3 MB",
+    icon: "\uD83D\uDCE6",
+    color: "#A93226",
+    description: "PKGi est une application qui permet de télécharger et d'installer des applications, des mises à jour et des DLC directement depuis votre console. Plus besoin de passer par un PC ou une clé USB pour enrichir votre bibliothèque de jeux.",
+    features: [
+                "Direct Download : Téléchargement en arrière-plan sur la console.",
+                "Large Library : Accès aux applications et contenus additionnels.",
+                "Auto-Install : Installation automatique des fichiers après téléchargement.",
+                "Update Check : Vérification des mises à jour disponibles.",
+                "Simple UI : Interface fluide pour une navigation facile."
+    ],
+    download: "https://pkg-zone.com/download/ps4/PKGI00001/latest",
+    requirements: "Firmware 5.05 à 12.52 / GoldHEN v2.4b18.7 ou supérieur"
+},
+        {
     name: "Apollo Save Tool",
     developer: "Bucanero",
     category: "tools",
