--- a/index.html
+++ b/index.html
@@ -160,16 +160,13 @@
     </div>
 </header>
    <div style="
-    background: #1a1a1a; 
-    border: 1px solid #333; 
-    color: #888; 
-    padding: 10px 20px; 
-    border-radius: 50px; 
+    background: rgba(155, 89, 182, 0.1); 
+    border-left: 4px solid #9B59B6; 
+    color: #cccccc; 
+    padding: 10px 15px; 
     font-size: 13px;
-    text-align: center;
-    margin: 15px auto;
-    max-width: fit-content;">
-    \u2139\uFE0F Requiert <span style="color: #eee;">GoldHEN</span> \u2022 Firmware <span style="color: #eee;">5.05 - 12.52</span>
+    font-family: sans-serif;">
+    <strong style="color: #9B59B6;">GoldHEN requis</strong> (Firmware 5.05 - 12.52)
 </div>
 
 <div class="tabs">
