--- a/index.html
+++ b/index.html
@@ -160,13 +160,17 @@
     </div>
 </header>
    <div style="
-    background: rgba(155, 89, 182, 0.1); 
-    border-left: 4px solid #9B59B6; 
-    color: #cccccc; 
-    padding: 10px 15px; 
+    background: #1a1a1a; 
+    border: 1px solid #333; 
+    color: #888; 
+    padding: 8px 20px; 
+    border-radius: 50px; 
     font-size: 13px;
+    text-align: center;
+    margin: 15px auto;
+    max-width: fit-content;
     font-family: sans-serif;">
-    <strong style="color: #9B59B6;">GoldHEN requis</strong> (Firmware 5.05 - 12.52)
+    Nécessite <span style="color: #9B59B6; font-weight: bold;">GoldHEN</span> — Firmware <strong>5.05 à 12.52</strong>
 </div>
 
 <div class="tabs">
