--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     margin: 15px auto;
     max-width: fit-content;
     font-family: sans-serif;">
-    Nécessite <span style="color: #9B59B6; font-weight: bold;">GoldHEN</span> — Firmware <strong>5.05 à 12.52</strong>
+    Nécessite <span style="; font-weight: bold;">GoldHEN</span> — Firmware <strong>5.05 à 12.52</strong>
 </div>
 
 <div class="tabs">
