--- a/index.html
+++ b/index.html
@@ -159,18 +159,18 @@
         <div class="version">V1.2.4</div>
     </div>
 </header>
-   <div style="
-    background: #1a1a1a; 
-    border: 1px solid #333; 
-    color: #888; 
-    padding: 8px 20px; 
-    border-radius: 50px; 
-    font-size: 13px;
-    text-align: center;
-    margin: 40px auto;
-    max-width: fit-content;
-    font-family: sans-serif;">
-    Nécessite <span style="; font-weight: bold;">GoldHEN</span> — Firmware <strong>5.05 à 12.52</strong>
+   <div style="display: flex; justify-content: flex-end; padding: 0 50px; margin-top: 20px;">
+    <div style="
+        background: #1a1a1a; 
+        border: 1px solid #333; 
+        color: #888; 
+        padding: 8px 20px; 
+        border-radius: 50px; 
+        font-size: 13px;
+        font-family: sans-serif;
+        white-space: nowrap;">
+        Nécessite <span style="; font-weight: bold;">GoldHEN</span> — Firmware <strong>5.05 à 12.52</strong>
+    </div>
 </div>
 
 <div class="tabs">
