--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="version">V1.2.4</div>
     </div>
 </header>
-   <div style="display: flex; justify-content: flex-end; padding: 0 50px; margin-top: 20px;">
+   <div style="padding: 0 50px; margin-top: 15px; overflow: hidden;">
     <div style="
         background: #1a1a1a; 
         border: 1px solid #333; 
@@ -167,8 +167,8 @@
         padding: 8px 20px; 
         border-radius: 50px; 
         font-size: 13px;
-        font-family: sans-serif;
-        white-space: nowrap;">
+        float: right;
+        font-family: sans-serif;">
         Nécessite <span style="; font-weight: bold;">GoldHEN</span> — Firmware <strong>5.05 à 12.52</strong>
     </div>
 </div>
