--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Use of these names and trademarks does not imply any affiliation with or endorse
                 "Custom Icons : Icônes système modifiées pour un look rétro.",
                 "Full HD : Optimisé pour un rendu net sur tous les écrans."
     ],
-    download: "https://download2292.mediafire.com/exmx4pfdehqgWzxeat5zBtUbtSuMYTpm7Z2N1ZALpRr5oT-KEmJDcs1xrMTyU7uNuRW4eh5Vj4vhU0Df7DBlL3wuuiD1hNGIvcBZjIe2aAD83DwzqqjQGjSCBzWk6F8n6fhfi5suX5k1b1uimhgOkH-1pOwbLAkiLhRTS6AqeZfm/yckqpfsklap7bn1/EP9000-CUSA07875_00-PSLEGACYTHEME001.pkg",
+    download: "link",
     requirements: "Firmware 5.05 à 12.52 / GoldHEN activé"
 },
         {
